src/test/ui/issues/issue-17337.stderr
error: use of deprecated item 'Foo::foo': text
  --> $DIR/issue-17337.rs:16:6
   |
LL |     .foo();
   |      ^^^
   |
note: lint level defined here
  --> $DIR/issue-17337.rs:2:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

